Fix QuerySplitter to merge query parts instead of overriding
(cherry picked from commit 86874e7cccfe90727218f7ea945093acf6062f16)